# school-calendar-agent

./: .gitignore  Dockerfile  README.md  app.py  gmail_process.py  pyproject.toml
.github/scripts/: ossindex_scan.py
.github/workflows/: codeql-config.yml  codeql.yml  nightly.yml  sonatype-config.yml  sonatype-oss-index.yml
